# renamer

./: .gitignore  Makefile.am  README.md  configure  configure.ac  pre-inst-env.in  tissue.scm
issues/: create-basic-tissue-workflow.gmi  handle-errors-and-display-messages.gmi  handle-mutually-exclusive-operations.gmi  include-ignore-option.gmi  include-verbose-option.gmi
renamer/: operations.scm  regex.scm  renamer.scm  utils.scm
scripts/: .renamer-real.in  renamer.in
